Adding sample endpoint

--- a/MathPlacementTest.Api/MathPlacementTest.Api.csproj
+++ b/MathPlacementTest.Api/MathPlacementTest.Api.csproj
@@ -4,5 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MathPlacementTest.Data\MathPlacementTest.Data.csproj" />
+    <ProjectReference Include="..\MathPlacementTest.Services\MathPlacementTest.Services.csproj" />
+  </ItemGroup>
+
 
 </Project>
