--- a/MathPlacementTest.Api/appsettings.json
+++ b/MathPlacementTest.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MathDb": "Server=localhost;Database=MathPlacementTest;Uid=mathTestUsr;Pwd=Mathtest21!"
+  }
 }
