--- a/MathPlacementTest.Services/MathPlacementTest.Services.csproj
+++ b/MathPlacementTest.Services/MathPlacementTest.Services.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\MathPlacementTest.Data\MathPlacementTest.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Objects\TestQuestions\" />
+    <Folder Include="Services\TestQuestions\" />
+  </ItemGroup>
 </Project>
