Starting point of adding services for QuestionaireInfo

--- a/MathPlacementTest.Services/MathPlacementTest.Services.csproj
+++ b/MathPlacementTest.Services/MathPlacementTest.Services.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\MathPlacementTest.Data\MathPlacementTest.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\StudentQuestionaireInfo\" />
+  </ItemGroup>
+
 </Project>
