Updating connection string to use remote server

--- a/MathPlacementTest.Api/appsettings.json
+++ b/MathPlacementTest.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MathDb": "Server=localhost;Database=MathPlacementTest;Uid=mathTestUsr;Pwd=Mathtest21!"
+    "MathDb": "Server=mathplacementtest.mysql.database.azure.com;Database=MathPlacementTest;Uid=MathTestUsr@mathplacementtest;Pwd=Mathtest21!"
   }
 }
