--- a/MathPlacementTest.Services/MathPlacementTest.Services.csproj
+++ b/MathPlacementTest.Services/MathPlacementTest.Services.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
   </ItemGroup>
 
