--- a/MathPlacementTest.Services/MathPlacementTest.Services.csproj
+++ b/MathPlacementTest.Services/MathPlacementTest.Services.csproj
@@ -17,5 +17,7 @@
   <ItemGroup>
     <Folder Include="Objects\TestQuestions\" />
     <Folder Include="Services\TestQuestions\" />
+    <Folder Include="Objects\StudentDetails\" />
+    <Folder Include="Services\StudentDetails\" />
   </ItemGroup>
 </Project>
