--- a/MathPlacementTest.Api/MathPlacementTest.Api.csproj
+++ b/MathPlacementTest.Api/MathPlacementTest.Api.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
   <ItemGroup>
