added info controller and get past courses

--- a/MathPlacementTest.Services/MathPlacementTest.Services.csproj
+++ b/MathPlacementTest.Services/MathPlacementTest.Services.csproj
@@ -22,5 +22,7 @@
     <Folder Include="Services\TestQuestions\" />
     <Folder Include="Objects\StudentDetails\" />
     <Folder Include="Services\StudentDetails\" />
+    <Folder Include="Services\InfoGetPastCourses\" />
+    <Folder Include="Objects\PastCourses\" />
   </ItemGroup>
 </Project>
